[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billionverify"
version = "1.0.0"
description = "Official BillionVerify Python SDK for email verification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "BillionVerify", email = "support@billionverify.com" }
]
keywords = [
    "email",
    "verification",
    "validation",
    "billionverify",
    "email-verification"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://billionverify.com"
Documentation = "https://billionverify.com/docs"
Repository = "https://github.com/BillionVerify/billionverify-python"

[tool.hatch.build.targets.wheel]
packages = ["billionverify"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py38"
